[package]
name = "rssurl"
version = "0.1.0"
authors = ["Jostein Kjønigsen <jostein@kjonigsen.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
reqwest = { version = "0.11.0", features = [ "blocking" ] }
syndication = "0.5.0"

